[package]
name = "flight_pin"
version = "0.1.0"
authors = ["Koki Teramoto <terarin@terarin-iw.net>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "flight_pin"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
esp-idf-hal = "0.45.2"
esp-idf-svc = "0.51"
log = "0.4"

[build-dependencies]
embuild = "0.33"
